@@ -1,9 +1,9 @@
 package com.sip.api;
 
 import com.sip.api.domains.activity.Activity;
-import com.sip.api.domains.resource.Resource;
 import com.sip.api.domains.timeslot.Timeslot;
 import com.sip.api.domains.user.User;
+import com.sip.api.domains.user.UserConverter;
 import com.sip.api.dtos.RoleCreationDto;
 import com.sip.api.dtos.activity.ActivityCreationDto;
 import com.sip.api.dtos.availableClass.AvailableClassesCreationDto;
@@ -22,7 +22,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.DayOfWeek;
 import java.time.LocalTime;
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
@@ -38,64 +37,106 @@ public class BasicSetup implements ApplicationRunner {
     private final TimeslotService timeslotService;
     private final AvailableClassService availableClassService;
 
-    private List<Resource> resourceList = new ArrayList<>();
-
     @Value("${superadmin-email}")
     private String superAdminEmail;
     @Value("${superadmin-password}")
     private String superAdminPassword;
 
+    private User professor;
+
     @Override
+    @Transactional
     public void run(ApplicationArguments args) {
         try {
             createResources();
+        } catch (Exception e) {
+            log.error("Error creating resources. Message: {}", e.getMessage());
+        }
+        try {
             createRoles();
+        } catch (Exception e) {
+            log.error("Error creating roles. Message: {}", e.getMessage());
+        }
+        try {
             createTimeslots();
-            createActivities();
-            createAvailableClasses();
+        } catch (Exception e) {
+            log.error("Error creating timeslots. Message: {}", e.getMessage());
+        }
+        try {
             if (!userService.existsByEmail(superAdminEmail)) {
                 User user = userService.createUser(UserCreationDto.builder()
                         .dni(99999999)
                         .email(superAdminEmail)
                         .password(superAdminPassword)
+                        .phone(22233325L)
                         .rolesNames(Collections.singletonList("ROLE_ADMIN"))
                         .build());
                 userService.activateUser(user.getId());
-                log.info("Admin role created");
+                log.info("Admin created");
             }
         } catch (Exception e) {
-            log.error("Something went wrong while setting up application!. Error: {}", e.getMessage());
+            log.error("Error creating admin. Message: {}", e.getMessage());
+        }
+        try {
+
+            String professorEmail = "professor@mail.com";
+            if (!userService.existsByEmail(professorEmail)) {
+                professor = userService.createUser(UserCreationDto.builder()
+                        .dni(123987)
+                        .email(professorEmail)
+                        .password("12345678")
+                        .rolesNames(Collections.singletonList("ROLE_PROFESSOR"))
+                        .build());
+                userService.activateUser(professor.getId());
+                log.info("Professor created");
+            }
+        } catch (Exception e) {
+            log.error("Error creating professor. Message: {}", e.getMessage());
+        }
+        try {
+            createActivities();
+        } catch (Exception e) {
+            log.error("Error creating activities. Message: {}", e.getMessage());
+        }
+        try {
+            createAvailableClasses();
+        } catch (Exception e) {
+            log.error("Error creating available classes. Message: {}", e.getMessage());
         }
     }
 
     private void createActivities() {
-        try{
+        try {
             activityService.createActivity(ActivityCreationDto.builder()
                     .name("CROSSFIT")
                     .basePrice(2250.75D)
+                    .professor(UserConverter.entityToDtoSlim(professor))
                     .attendeesLimit(12)
                     .build());
             activityService.createActivity(ActivityCreationDto.builder()
                     .name("SPINNING")
                     .basePrice(3550.25D)
+                    .professor(UserConverter.entityToDtoSlim(professor))
                     .attendeesLimit(20)
                     .build());
             activityService.createActivity(ActivityCreationDto.builder()
                     .name("BOXING")
                     .basePrice(1050.10D)
+                    .professor(UserConverter.entityToDtoSlim(professor))
                     .attendeesLimit(6)
                     .build());
-        }catch (Exception e){
+        } catch (Exception e) {
             log.warn("Activities already created, skipping...");
         }
     }
 
+
     private void createAvailableClasses() {
-        try{
+        try {
             createAvailableClass(1, 0);
             createAvailableClass(2, 1);
             createAvailableClass(1, 2);
-        }catch (Exception e){
+        } catch (Exception e) {
             log.warn("Available classes already created, skipping...");
         }
     }
@@ -119,7 +160,6 @@ public class BasicSetup implements ApplicationRunner {
                 timeslotService.createTimeslot(TimeslotCreationDto.builder()
                         .startTime(LocalTime.of(i, 15))
                         .endTime(LocalTime.of(i + 1, 15))
-                        .availableClasses(Collections.emptySet())
                         .dayOfWeek(getRandomDay())
                         .build());
             }
@@ -128,7 +168,6 @@ public class BasicSetup implements ApplicationRunner {
                 timeslotService.createTimeslot(TimeslotCreationDto.builder()
                         .startTime(LocalTime.of(i, 15))
                         .endTime(LocalTime.of(i + 1, 15))
-                        .availableClasses(Collections.emptySet())
                         .dayOfWeek(getRandomDay())
                         .build());
             }
@@ -139,30 +178,35 @@ public class BasicSetup implements ApplicationRunner {
 
     private void createResources() {
         if (!resourceService.existsByUrl("/*"))
-            resourceList.add(resourceService.createResource(ResourceCreationDto.builder()
+            resourceService.createResource(ResourceCreationDto.builder()
                     .name("ALL")
                     .url("/*")
-                    .build()));
+                    .build());
         if (!resourceService.existsByUrl("/user"))
-            resourceList.add(resourceService.createResource(ResourceCreationDto.builder()
-                    .name("USERS")
+            resourceService.createResource(ResourceCreationDto.builder()
+                    .name("USER")
                     .url("/user")
-                    .build()));
+                    .build());
         if (!resourceService.existsByUrl("/management"))
-            resourceList.add(resourceService.createResource(ResourceCreationDto.builder()
+            resourceService.createResource(ResourceCreationDto.builder()
                     .name("MANAGEMENT")
                     .url("/management")
-                    .build()));
+                    .build());
+        if (!resourceService.existsByUrl("/activity"))
+            resourceService.createResource(ResourceCreationDto.builder()
+                    .name("ACTIVITY")
+                    .url("/activity")
+                    .build());
         if (!resourceService.existsByUrl("/login"))
-            resourceList.add(resourceService.createResource(ResourceCreationDto.builder()
+            resourceService.createResource(ResourceCreationDto.builder()
                     .name("LOGIN")
                     .url("/login")
-                    .build()));
+                    .build());
         if (!resourceService.existsByUrl("/logout"))
-            resourceList.add(resourceService.createResource(ResourceCreationDto.builder()
+            resourceService.createResource(ResourceCreationDto.builder()
                     .name("LOGOUT")
                     .url("/logout")
-                    .build()));
+                    .build());
     }
 
     private void createRoles() {
@@ -170,18 +214,24 @@ public class BasicSetup implements ApplicationRunner {
             roleService.createRole(RoleCreationDto
                     .builder()
                     .name("ROLE_ADMIN")
-                    .allowedResourcesIds(Collections.singletonList(resourceList.get(0).getId()))
+                    .allowedResourcesIds(List.of(resourceService.findByName("ALL").getId()))
+                    .build());
+        if (!roleService.existsByName("ROLE_PROFESSOR"))
+            roleService.createRole(RoleCreationDto
+                    .builder()
+                    .name("ROLE_PROFESSOR")
+                    .allowedResourcesIds(List.of(resourceService.findByName("LOGIN").getId(),
+                            resourceService.findByName("LOGOUT").getId(),
+                            resourceService.findByName("ACTIVITY").getId(),
+                            resourceService.findByName("USER").getId()))
                     .build());
         if (!roleService.existsByName("ROLE_USER"))
             roleService.createRole(RoleCreationDto
                     .builder()
                     .name("ROLE_USER")
-//                    .allowedResourcesIds(resourceList
-//                            .stream()
-//                            .map(AbstractEntity::getId)
-//                            .filter(id -> !id.equals(resourceService.findByName("ALL").getId()))
-//                            .collect(Collectors.toList()))
-                    .allowedResourcesIds(List.of(resourceList.get(3).getId(), resourceList.get(4).getId()))
+                    .allowedResourcesIds(List.of(resourceService.findByName("LOGIN").getId(),
+                            resourceService.findByName("LOGOUT").getId(),
+                            resourceService.findByName("USER").getId()))
                     .build());
     }
 }
